--- a/circuits/package.json
+++ b/circuits/package.json
@@ -6,8 +6,10 @@
   },
   "dependencies": {
     "@zk-email/circuits": "^6.1.3",
+    "@zk-kit/lean-imt": "^2.0.1",
     "circomkit": "^0.0.22",
-    "circomlib": "^2.0.5"
+    "circomlib": "^2.0.5",
+    "poseidon-lite": "^0.2.0"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.1",
