--- a/circuits/package.json
+++ b/circuits/package.json
@@ -12,9 +12,13 @@
     "poseidon-lite": "^0.2.0"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "^20.3.0",
+    "@types/snarkjs": "^0.7.8",
+    "hardhat": "^2.22.6",
     "mocha": "^10.2.0",
+    "snarkjs": "^0.7.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
   }
