--- a/circuits/.gitignore
+++ b/circuits/.gitignore
@@ -120,8 +120,8 @@ tmp.ptau
 # ignore auto generated test circuits
 circuits/test
 ptau
+proofs
 
 artifacts
 cache
 typechain-types
-fixed_proofs/passport_verification
